# react-native-jsi-lib-example

./: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-fast-jsi-lib.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/fastjsilib/: FastJsiLibModule.java  FastJsiLibPackage.java
cpp/: react-native-fast-jsi-lib.cpp  react-native-fast-jsi-lib.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/debug/java/com/fastjsilibexample/: ReactNativeFlipper.java
example/android/app/src/main/java/com/fastjsilibexample/: MainActivity.java  MainApplication.java
example/android/app/src/main/res/values/: strings.xml
example/android/app/src/release/java/com/fastjsilibexample/: ReactNativeFlipper.java
example/ios/: File.swift  Podfile
example/ios/FastJsiLibExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/FastJsiLibExample.xcodeproj/: project.pbxproj
example/ios/FastJsiLibExample.xcodeproj/xcshareddata/xcschemes/: FastJsiLibExample.xcscheme
example/ios/FastJsiLibExampleTests/: FastJsiLibExampleTests.m
example/src/: App.tsx
ios/: FastJsiLib.h  FastJsiLib.mm
ios/FastJsiLib.xcodeproj/: project.pbxproj
src/: index.tsx
